# RaspberryPi_GarbageClassification

./: 2021-01-11-raspios-buster-armhf.zip.torrent  CMakeLists.txt  ImageRecognition.py  Keyword.ini  README.md  TERMINALSTATE.ini  [Class]Table.xml  main.cpp  model.py
Classify/: CMakeLists.txt  Classify.cpp  Classify.h  ImageRecognition.py  ImageRecognitionMgr.cpp
ClientProgram/: CMakeLists.txt  ClientNetwork.cpp  ClientNetwork.hpp  ClientProgram.cpp  ClientProgram.h  ClientProgramClass.h  ClientProgramClassGui.cpp  ClientProgramClassMain.cpp  ClientProgramClassSlots.cpp  ClientQuickStart.cpp  ClientQuickStart.h
ClientProgram/QuickSet/: CMakeLists.txt
ClientTarget/: CMakeLists.txt  ClientTarget.cpp  ClientTarget.hpp
FileService/: CMakeLists.txt  FileService.cpp  FileService.h
GetIpAndMac/: GetIpAndMac.hpp
ImageRecognitionModule/: CMakeLists.txt  ImageRecognitionModule.cpp  ModelControl.hpp
KeywordAnalsys/: CMakeLists.txt  KeywordAnalsys.cpp  KeywordAnalsys.h  KeywordAnalsysTaskMgr.cpp  Signal.hpp
LogService/: CMakeLists.txt  LogService.cpp  LogService.h
Network/: CMakeLists.txt  GetIpAndMac.hpp  Network.cpp  Network.h  tcpServer.cpp  udpClient.cpp  udpServer.cpp
PiServer/: CMakelists.txt  PiServer.cpp  PiServer.h  prtsc.py  test_garbage.py
PiServer/Client/: CMakeLists.txt  ClientProgram.cpp  ClientProgram.h  ClientProgramClass.h  ClientProgramClassGui.cpp  ClientProgramClassMain.cpp  ClientProgramClassSlots.cpp  ClientQuickStart.cpp  ClientQuickStart.h
PiServer/Terminal/: CMakeLists.txt  TerminalModule.cpp  TerminalModule.hpp
PythonInterface/: CMakeLists.txt
PythonScript/: batch_predict.py  train.py
PythonScript/TensorflowTrain/: classify_garbage.py  test_garbage.py  train.py
RaspberryPi/ResNet/: batch_predict.py  model.py  predict.py  train.py
RaspberryPi/VGG/: predict.py  train.py
RaspberryPi/dataset/: split_data.py
TensorflowTrain/: trans_classify_garbage.py
TerminalModule/: CMakeLists.txt  GetIpAndMac.hpp  TerminalModule.cpp  TerminalModule.hpp  TerminalNetwork.cpp  TerminalNetwork.hpp
UdpNetwork/: CMakeLists.txt  UdpNetwork.cpp  UdpNetwork.h  udpClient.cpp  udpServer.cpp
XmlReader/: CMakeLists.txt  XmlReader.cpp  XmlReader.h
drafts/GetIpAndMac/: CMakeLists.txt  GetIpAndMac.cpp
drafts/ImageRecognitionModule/: CMakeLists.txt  ImageRecognitionModule.cpp  ModelControl.hpp
drafts/PythonInterface/: PythonInterface.cpp  PythonInterface.hpp
drafts/tcpSocket/: CMakeLists.txt  tcpSocket.h
drafts/udpSocket/: udpSocket.cpp
tcpSocket/: tcpSocket.cpp
udpSocket/: CMakeLists.txt  udpSocket.cpp  udpSocket.h
