AUX_SOURCE_DIRECTORY(. DIR_SRCS)

set(libUdpNetwork ./UdpNetwork.cpp)

find_package(Qt5Widgets CONFIG REQUIRED)
find_package(Qt5Network CONFIG REQUIRED)
find_package(Qt5Core CONFIG REQUIRED)
find_package(PythonLibs REQUIRED)

include_directories("./")
include_directories(${PYTHON_INCLUDE_DIRS})
include_directories("${PROJECT_SOURCE_DIR}/PythonInterface")
include_directories("${PROJECT_SOURCE_DIR}/Classify")
include_directories("${PROJECT_SOURCE_DIR}/udpSocket")
include_directories("${PROJECT_SOURCE_DIR}/tcpSocket")
include_directories("${PROJECT_SOURCE_DIR}/GetIpAndMac")
include_directories("${PROJECT_SOURCE_DIR}/LogService")
include_directories("${PROJECT_SOURCE_DIR}/KeywordAnalsys")

add_library(UdpNetwork_shared SHARED ${libUdpNetwork})
target_link_libraries(UdpNetwork_shared Qt5::Core)
target_link_libraries(UdpNetwork_shared Qt5::Widgets)
target_link_libraries(UdpNetwork_shared Qt5::Network)
target_link_libraries(UdpNetwork_shared PythonInterface_shared)
target_link_libraries(UdpNetwork_shared Classify_shared)
target_link_libraries(UdpNetwork_shared UdpSocket_shared)
target_link_libraries(UdpNetwork_shared TcpSocket_shared)
target_link_libraries(UdpNetwork_shared GetIpAndMac_shared)
target_link_libraries(UdpNetwork_shared LogService_shared)
target_link_libraries(UdpNetwork_shared XmlReader_shared)
target_link_libraries(UdpNetwork_shared KeywordAnalsys_shared)

SET_TARGET_PROPERTIES (UdpNetwork_shared PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (UdpNetwork_shared PROPERTIES VERSION 1.1 SOVERSION 1)